Add basic HTML structure

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Diversitea</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <header>
+    
+  </header>
+  <main>
 
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
