--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
   <header>
-    
+    Diversitea
   </header>
   <main>
-
+    <div class="intro c-light relative pb-3">
+      <h2>DiversiTea</h2>
+    </div>
   </main>
   <footer>
 
