Add basic splash and heading overhaul

--- a/index.html
+++ b/index.html
@@ -4,18 +4,51 @@
   <meta charset="UTF-8">
   <title>Diversitea</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 </head>
 <body>
   <header>
-    Diversitea
+    <div class="logo pa-3">
+      <a href="#">
+        <h1 class="sr">Diversitea</h1>
+        <img src="images/logo-green.svg" alt="DiversiTea logo" width="64px" height="64px">
+      </a>
+    </div>
   </header>
   <main>
-    <div class="intro c-light relative pb-3">
-      <h2>DiversiTea</h2>
-    </div>
-  </main>
-  <footer>
 
+    <div class="intro relative pb-4 ta-center">
+      <div class="intro-heading">
+        <h2 class="lh-heading fs1">Headline</h2>
+        <h3 class="fs3">Pitch</h3>
+      </div>
+    </div>
+
+    <div class="splash" style="background-image: url('images/splash-bg.jpg')">
+      <div class="splash-heading mw7 ph-4 pv-4">
+        <h3 class="fs2">
+          Splash title
+        </h3>
+        <p>Splash paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, facere distinctio nemo fuga cupiditate.</p>
+
+        <form action="">
+          <input type="text" class="fs5 mb-3"placeholder="E-mail address">
+            <button class="btn fs5 btn--primary">Subscribe Now</button>
+        </form>
+
+      </div>
+
+    </div>
+
+  </main>
+  <footer class="wrapper--narrow pa-2">
+    <ul class="nolist footer-nav ta-center">
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Link</a></li>
+    </ul>
   </footer>
 </body>
 </html>
