--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
       </div>
     </div>
 
+    <div class="wrapper three-point">
+      <ul class="nolist c-light three-point--list">
+        <li class="ta-center">
+          <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
+          <h3 class="fs3">One</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </li>
+        <li class="ta-center">
+          <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
+          <h3 class="fs3">Two</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </li>
+        <li class="ta-center">
+          <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
+          <h3 class="fs3">Three</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        </li>
+      </ul>
+    </div>
+
     <div class="splash" style="background-image: url('images/splash-bg.jpg')">
       <div class="splash-heading mw7 ph-4 pv-4">
         <h3 class="fs2">
