--- a/index.html
+++ b/index.html
@@ -53,16 +53,19 @@
         </h3>
         <p>Splash paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, facere distinctio nemo fuga cupiditate.</p>
 
-        <form action="//diversitea.us15.list-manage.com/subscribe/post?u=5d1b340a49fa3b3d5c7bf98f4&amp;id=68164ff1bf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          	<label for="mce-EMAIL" style="display: none;">Email Address</label>
-          	<input type="email" value="" name="EMAIL" class="required email fs5 mb-3" id="mce-EMAIL" placeholder="E-mail address">
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d1b340a49fa3b3d5c7bf98f4_68164ff1bf" tabindex="-1" value=""></div>
-            <button class="btn fs5 btn--primary" type="submit" value="Subscribe" name="subscribe">Subscribe Now</button>
-        </form>
-
       </div>
 
+    </div>
+
+    <div class="wrapper subscribe c-light">
+      <form action="//diversitea.us15.list-manage.com/subscribe/post?u=5d1b340a49fa3b3d5c7bf98f4&amp;id=68164ff1bf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <label for="mce-EMAIL" style="display: none;">Email Address</label>
+          <input type="email" value="" name="EMAIL" class="required email fs5" id="mce-EMAIL" placeholder="E-mail address">
+        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d1b340a49fa3b3d5c7bf98f4_68164ff1bf" tabindex="-1" value=""></div>
+          <button class="btn fs5 btn--primary" type="submit" value="Subscribe" name="subscribe">Subscribe Now</button>
+          <h4 class="fs4 dib va-sub ph-3 ta-center">Sign up for a 5% discount on your first purchase!</h4>
+      </form>
     </div>
 
   </main>
