Add colour button to be black

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <input type="email" value="" name="EMAIL" class="required email fs5" id="mce-EMAIL" placeholder="E-mail address">
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d1b340a49fa3b3d5c7bf98f4_68164ff1bf" tabindex="-1" value=""></div>
-          <button class="btn fs5 btn--primary" type="submit" value="Subscribe" name="subscribe">Subscribe Now</button>
+          <button class="btn fs5 btn--primary bg-black" type="submit" value="Subscribe" name="subscribe">Subscribe Now</button>
           <h4 class="fs4 dib va-sub ph-3 ta-center">Sign up for a 5% discount on your first purchase!</h4>
       </form>
     </div>
