--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     </div>
 
   </main>
-  <footer class="wrapper--narrow pa-2">
-    <ul class="nolist footer-nav ta-center">
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
+  <footer class="wrapper pv-2">
+    <ul class="nolist footer-nav ta-left">
+      <li><a href="#">Facebook</a></li>
+      <li><a href="#">Twitter</a></li>
+      <li><a href="#">Instagram</a></li>
     </ul>
   </footer>
 </body>
