--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="wrapper three-point">
-      <ul class="nolist c-light three-point--list">
+      <ul class="nolist c-dark three-point--list">
         <li class="ta-center">
           <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
           <h3 class="fs3">One</h3>
