--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
     </div>
 
-    <div class="wrapper subscribe c-light">
-      <form action="//diversitea.us15.list-manage.com/subscribe/post?u=5d1b340a49fa3b3d5c7bf98f4&amp;id=68164ff1bf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div class="subscribe c-light">
+      <form action="//diversitea.us15.list-manage.com/subscribe/post?u=5d1b340a49fa3b3d5c7bf98f4&amp;id=68164ff1bf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate wrapper" target="_blank" novalidate>
           <label for="mce-EMAIL" style="display: none;">Email Address</label>
           <input type="email" value="" name="EMAIL" class="required email fs5" id="mce-EMAIL" placeholder="E-mail address">
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
