Add wave to intro

--- a/index.html
+++ b/index.html
@@ -26,24 +26,29 @@
       </div>
     </div>
 
-    <div class="wrapper three-point">
-      <ul class="nolist c-dark three-point--list">
-        <li class="ta-center">
-          <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
-          <h3 class="fs3">One</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        </li>
-        <li class="ta-center">
-          <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
-          <h3 class="fs3">Two</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        </li>
-        <li class="ta-center">
-          <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
-          <h3 class="fs3">Three</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        </li>
-      </ul>
+    <div class="three-point h-auto w-100 relative">
+      <div class="wrapper">
+        <ul class="nolist c-dark three-point--list">
+          <li class="ta-center">
+            <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
+            <h3 class="fs3">One</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </li>
+          <li class="ta-center">
+            <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
+            <h3 class="fs3">Two</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </li>
+          <li class="ta-center">
+            <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
+            <h3 class="fs3">Three</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="absolute bottom-0">
+        <img src="images/wave.svg" class="wave" alt="">
+      </div>
     </div>
 
     <div class="splash" style="background-image: url('images/splash-bg.jpg')">
