--- a/index.html
+++ b/index.html
@@ -7,71 +7,14 @@
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+
 </head>
 <body>
   <header>
-    <div class="logo pa-3">
-      <a href="#">
-        <h1 class="sr">Diversitea</h1>
-        <img src="images/logo-green.svg" alt="DiversiTea logo" width="64px" height="64px">
-      </a>
-    </div>
+
   </header>
   <main>
-
-    <div class="intro relative pb-4 ta-center">
-      <div class="intro-heading">
-        <h2 class="lh-heading fs1">Headline</h2>
-        <h3 class="fs3">Pitch</h3>
-      </div>
-    </div>
-
-    <div class="three-point h-auto w-100 relative">
-      <div class="wrapper">
-        <ul class="nolist c-dark three-point--list">
-          <li class="ta-center">
-            <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
-            <h3 class="fs3">One</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-          </li>
-          <li class="ta-center">
-            <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
-            <h3 class="fs3">Two</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-          </li>
-          <li class="ta-center">
-            <img src="images/ic_date_range_white_24px.svg" alt="" width="150px" height="150px" class="di">
-            <h3 class="fs3">Three</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-          </li>
-        </ul>
-      </div>
-      <div class="absolute bottom-0">
-        <img src="images/wave.svg" class="wave" alt="">
-      </div>
-    </div>
-
-    <div class="splash" style="background-image: url('images/splash-bg.jpg')">
-      <div class="splash-heading mw7 ph-4 pv-4">
-        <h3 class="fs2">
-          Splash title
-        </h3>
-        <p>Splash paragraph. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, facere distinctio nemo fuga cupiditate.</p>
-
-      </div>
-
-    </div>
-
-    <div class="subscribe c-light">
-      <form action="//diversitea.us15.list-manage.com/subscribe/post?u=5d1b340a49fa3b3d5c7bf98f4&amp;id=68164ff1bf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate wrapper" target="_blank" novalidate>
-          <label for="mce-EMAIL" style="display: none;">Email Address</label>
-          <input type="email" value="" name="EMAIL" class="required email fs5" id="mce-EMAIL" placeholder="E-mail address">
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d1b340a49fa3b3d5c7bf98f4_68164ff1bf" tabindex="-1" value=""></div>
-          <button class="btn fs5 btn--primary bg-black" type="submit" value="Subscribe" name="subscribe">Subscribe Now</button>
-          <h4 class="fs4 dib va-sub ph-3 ta-center">Sign up for a 5% discount on your first purchase!</h4>
-      </form>
-    </div>
 
   </main>
   <footer class="wrapper pv-2">
