--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
   <header>
     <img src=".svg" alt="">
   </header>
-  <main>
+  <main class="wrapper doc">
+    <div class="colors">
+      <h3 class="doc--title">
+          Primary colours
+      </h3>
+      <div class="colour">
+        <div class="colour-example colour--primary c-light"><span class="db">$primary</span></div>
+        <div class="colour-example colour--accent c-light"><span class="db">$accent</span></div>
+        <div class="colour-example colour--text c-light"><span class="db">$text-color</span></div>
+        <div class="colour-example colour--background c-dark"><span class="db">$background-color</span></div>
+
+      </div>
+    </div>
 
   </main>
   <footer class="wrapper pv-2">
