--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img src=".svg" alt="">
+    <img src="images/logo.jpg" alt="Logo" width="256px">
   </header>
   <main class="wrapper doc">
     <div class="colors">
