--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <img src="images/logo.jpg" alt="Logo" width="256px">
   </header>
-  <main class="wrapper doc">
+  <main class="wrapper-tight doc">
 
     <h3 class="doc--title">
         Primary colours
@@ -25,6 +25,15 @@
         <div class="colour-example colour--accent c-light"><span class="db">$accent</span></div>
         <div class="colour-example colour--text c-light"><span class="db">$text-color</span></div>
         <div class="colour-example colour--background c-dark"><span class="db">$background-color</span></div>
+    </div>
+
+    <h3 class="doc--title">
+        Typography
+    </h3>
+
+    <div class="typography">
+      <p class="sans-serif">Open Sans is sans-serif</p>
+      <p class="serif">Roboto Slab is serif</p>
     </div>
 
   </main>
