--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </h3>
 
     <div class="colour">
+      <!-- not valid classes outside of documentation -->
         <div class="colour-example colour--primary c-light"><span class="db">$primary</span></div>
         <div class="colour-example colour--accent c-light"><span class="db">$accent</span></div>
         <div class="colour-example colour--text c-light"><span class="db">$text-color</span></div>
@@ -32,8 +33,19 @@
     </h3>
 
     <div class="typography">
+      <!-- not valid classes outside of documentation -->
       <p class="sans-serif">Open Sans is sans-serif</p>
       <p class="serif">Roboto Slab is serif</p>
+    </div>
+
+    <h3 class="doc--title">
+        Buttons
+    </h3>
+
+    <div class="buttons">
+        <button class="btn">Default button</button>
+        <button class="btn btn--primary">Primary button</button>
+        <button class="btn btn--primary pa-3">Large primary button</button>
     </div>
 
   </main>
