--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     </div>
 
   </main>
-  <footer class="wrapper pv-2">
+  <!-- <footer class="wrapper pv-2">
     <ul class="nolist footer-nav ta-left">
       <li><a href="#">Facebook</a></li>
       <li><a href="#">Twitter</a></li>
       <li><a href="#">Instagram</a></li>
     </ul>
-  </footer>
+  </footer> -->
 </body>
 </html>
