--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
         <button class="btn btn--primary pa-3">Large primary button</button>
     </div>
 
+    <!-- <h3 class="doc--title">
+        Buttons
+    </h3>
+
+    <div class="buttons">
+        <button class="btn">Default button</button>
+        <button class="btn btn--primary">Primary button</button>
+        <button class="btn btn--primary pa-3">Large primary button</button>
+    </div> -->
+
+
   </main>
   <!-- <footer class="wrapper pv-2">
     <ul class="nolist footer-nav ta-left">
