--- a/index.html
+++ b/index.html
@@ -48,16 +48,19 @@
         <button class="btn btn--primary pa-3">Large primary button</button>
     </div>
 
-    <!-- <h3 class="doc--title">
-        Buttons
+    <h3 class="doc--title">
+        Forms
     </h3>
 
-    <div class="buttons">
-        <button class="btn">Default button</button>
-        <button class="btn btn--primary">Primary button</button>
-        <button class="btn btn--primary pa-3">Large primary button</button>
-    </div> -->
-
+    <div class="forms">
+      <form action="//diversitea.us15.list-manage.com/subscribe/post?u=5d1b340a49fa3b3d5c7bf98f4&amp;id=68164ff1bf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate wrapper" target="_blank" novalidate>
+          <label for="mce-EMAIL" style="display: none;">Email Address</label>
+          <input type="email" value="" name="EMAIL" class="required email fs5" id="mce-EMAIL" placeholder="E-mail address">
+        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <button class="btn fs5 btn--primary bg-black" type="submit" value="Subscribe" name="subscribe">Subscribe Now</button>
+          <h4 class="fs4 dib va-sub ph-3 ta-center">Sign up for a 5% discount on your first purchase!</h4>
+      </form>
+    </div>
 
   </main>
   <!-- <footer class="wrapper pv-2">
