--- a/index.html
+++ b/index.html
@@ -2,73 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>TranslateGo</title>
+  <title>TranslateGo - Index</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
   <link href="https://fonts.googleapis.com/css?family=Roboto Slab|Open Sans" rel="stylesheet">
-
 </head>
 <body>
-  <header>
-    <img src="images/logo.jpg" alt="Logo" width="256px">
-  </header>
-  <main class="wrapper-tight doc">
 
-    <h3 class="doc--title">
-        Primary colours
-    </h3>
 
-    <div class="colour">
-      <!-- not valid classes outside of documentation -->
-        <div class="colour-example colour--primary c-light"><span class="db">$primary</span></div>
-        <div class="colour-example colour--accent c-light"><span class="db">$accent</span></div>
-        <div class="colour-example colour--text c-light"><span class="db">$text-color</span></div>
-        <div class="colour-example colour--background c-dark"><span class="db">$background-color</span></div>
-    </div>
-
-    <h3 class="doc--title">
-        Typography
-    </h3>
-
-    <div class="typography">
-      <!-- not valid classes outside of documentation -->
-      <p class="sans-serif">Open Sans is sans-serif</p>
-      <p class="serif">Roboto Slab is serif</p>
-    </div>
-
-    <h3 class="doc--title">
-        Buttons
-    </h3>
-
-    <div class="buttons">
-        <button class="btn">Default button</button>
-        <button class="btn btn--primary">Primary button</button>
-        <button class="btn btn--primary pa-3">Large primary button</button>
-    </div>
-
-    <h3 class="doc--title">
-        Forms
-    </h3>
-
-    <div class="forms">
-      <form action="//diversitea.us15.list-manage.com/subscribe/post?u=5d1b340a49fa3b3d5c7bf98f4&amp;id=68164ff1bf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate wrapper" target="_blank" novalidate>
-          <label for="mce-EMAIL" style="display: none;">Email Address</label>
-          <input type="email" value="" name="EMAIL" class="required email fs5" id="mce-EMAIL" placeholder="E-mail address">
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <button class="btn fs5 btn--primary bg-black" type="submit" value="Subscribe" name="subscribe">Subscribe Now</button>
-          <h4 class="fs4 dib va-sub ph-3 ta-center">Sign up for a 5% discount on your first purchase!</h4>
-      </form>
-    </div>
-
-  </main>
-  <!-- <footer class="wrapper pv-2">
-    <ul class="nolist footer-nav ta-left">
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Instagram</a></li>
-    </ul>
-  </footer> -->
 </body>
 </html>
