Remove redundant classes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="ma-3 ta-left">
               <div class="panel--expert mv-3">
                 <a href="#" class="b-none dib">
-                  <i class="panel--option material-icons fs4 c-primary va-textbottom">done</i>
+                  <i class="material-icons fs4 c-primary va-textbottom">done</i>
                 </a>
                 <h5 class="fs6 dib mh-3 ph-2">Expert #1</h5>
                 <img src="http://placehold.it/64x64" class="img--circle dib" alt="">
@@ -69,7 +69,7 @@
               </div>
               <div class="panel--expert mv-3">
                 <a href="#" class="b-none dib">
-                  <i class="panel--option material-icons fs4 c-primary va-textbottom">add_circle</i>
+                  <i class="material-icons fs4 c-primary va-textbottom">add_circle</i>
                 </a>
                 <h5 class="fs6 dib mh-3 ph-2">Expert #1</h5>
                 <img src="http://placehold.it/64x64" class="img--circle dib" alt="">
@@ -78,7 +78,7 @@
               <!-- <h4 class="fs6">Medical</h4> -->
               <div class="panel--expert mv-3">
                 <a href="#" class="b-none dib">
-                  <i class="panel--option material-icons fs4 c-primary va-textbottom">add_circle</i>
+                  <i class="material-icons fs4 c-primary va-textbottom">add_circle</i>
                 </a>
                 <h5 class="fs6 dib mh-3 ph-2">Expert #1</h5>
                 <img src="http://placehold.it/64x64" class="img--circle dib" alt="">
@@ -86,7 +86,7 @@
               </div>
               <div class="panel--expert mv-3">
                 <a href="#" class="b-none dib">
-                  <i class="panel--option material-icons fs4 c-primary va-textbottom">add_circle</i>
+                  <i class="material-icons fs4 c-primary va-textbottom">add_circle</i>
                 </a>
                 <h5 class="fs6 dib mh-3 ph-2">Expert #1</h5>
                 <img src="http://placehold.it/64x64" class="img--circle dib" alt="">
